[package]
name = "data-inspector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "0.6.2"
actix-files = "0.6.2"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.10.0"
reqwest = "0.11.20"
rust-bert = "0.21.0"
linfa = "0.6.1"
linfa-clustering = "0.6.1"
linfa-nn = "0.6.1"
linfa-tsne = "0.6.1"
ndarray = "0.15.6"
rand_xoshiro = "0.6.0"
serde_json = "1.0.107"
plotly = "0.8.4"
